Fix search query card alignment with rest of page (#483)

--- a/scss/search-input.scss
+++ b/scss/search-input.scss
@@ -173,6 +173,7 @@
   .query-cards-container {
     display: flex;
     flex-wrap: wrap;
+    margin-left: -1rem;
     //justify-content: space-around;
   }
   .bx--module__inner {
